01.traceflow/manifests/pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:    
    role: source
spec:
  containers:
  - name: nginx
    image: nginx:alpine  
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:    
    role: destination
spec:
  containers:
  - name: nginx
    image: nginx:alpine  
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 80
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: role
            operator: In
            values:              
              - source
        topologyKey: kubernetes.io/hostname    
---
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  labels:
    role: destination    
spec:
  containers:
  - name: nginx
    image: nginx:alpine  
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 80
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: role
            operator: In
            values:
            - source
        topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: tf-destination
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
  selector:
    role: destination
